feat: Добавить цитату

--- a/index.html
+++ b/index.html
@@ -15,9 +15,19 @@
   <div class="wrapper"><!--Обертка-->
     <div class="page"><!--Страница-->
       <header class="header"><!--Шапка-->
-        <section class="lead section">
+        <section class="lead"><!--Секция вступление-->
             <h1 class="lead__title">Илья & Янина</h1>
             <p class="lead__subtitle">приглашение на свадьбу</p>
+        </section>
+        <section class="about"><!--Секция описание-->
+          <div class="quote">
+            <div class="quote__strip"></div>
+            <div class="quote__wrapper">
+              <p class="quote__text">Мы шли к этому пять лет. Отношения прошли испытания в виде карантина, расстояния, работы.</p>
+              <h2 class="quote__title">Но мы справились!</h2>
+              <p class="quote__text">Мы будем счастливы отпраздновать нашу свадьбу в душевной атмосфере среди самых близких и родных нам людей.</p>
+            </div>
+           </div>
         </section>
       </header>
       <main class="content"><!--Страница-->
