feat: Добавить таблицу

--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
               <p class="quote__text">Мы будем счастливы отпраздновать нашу свадьбу в душевной атмосфере среди самых близких и родных нам людей.</p>
             </div>
            </div>
+          <ul class="table">
+            <li class="table__cell">
+              <h3 class="table__title">кто</h3>
+              <p class="table__text">самые дорогие и близкие</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__title">где</h3>
+              <p class="table__text">г. Новороссийск, п. Кабардинка</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__title">когда</h3>
+              <p class="table__text">7 мая 2023
+                воскресенье</p>
+            </li>
+          </ul>
         </section>
       </header>
       <main class="content"><!--Страница-->
