--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header class="header"><!--Шапка-->
         <section class="lead"><!--Секция вступление-->
             <h1 class="lead__title">Илья & Янина</h1>
-            <p class="lead__subtitle">приглашение на свадьбу</p>
+            <p class="lead__subtitle">Приглашение на свадьбу</p>
         </section>
         <section class="about"><!--Секция описание-->
           <div class="quote">
