feat: Добавить расписание

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding 07.05</title>
+    <title>Илья & Янина 07.05</title>
     <meta name="description" content="Website about our wedding">
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="IL.kor">
@@ -17,8 +17,10 @@
       <header class="header"><!--Шапка-->
         <section class="lead"><!--Секция вступление-->
             <h1 class="lead__title">Илья & Янина</h1>
-            <p class="lead__subtitle">Приглашение на свадьбу</p>
+            <p class="lead__subtitle">приглашение на свадьбу</p>
         </section>
+      </header>
+      <main class="content"><!--Страница-->
         <section class="about"><!--Секция описание-->
           <div class="quote">
             <div class="quote__strip"></div>
@@ -44,9 +46,30 @@
             </li>
           </ul>
         </section>
-      </header>
-      <main class="content"><!--Страница-->
-
+        <section class="time-table"><!--Секция расписание-->
+          <h2 class="section-title">Программа свадьбы</h2>
+          <p class="section-subtitle">7 мая, воскресенье</p>
+          <div class="section-wrapper">
+            <div class="section-line"></div>
+            <ul class="programms">
+              <li class="programms__programm">
+                <p class="programms__time">15:30-16:00</p>
+                <h3 class="programms__title">Сбор гостей</h3>
+                <p class="programms__text">Время пролетит незаметно за общением с другими гостями. Кроме того, ожидания скрасит приветственный фуршет и бокал игристого.</p>
+              </li>
+              <li class="progrsmms_programm">
+                <p class="programms__time">16:00-16:30</p>
+                <h3 class="programms__title">Выездная церемония</h3>
+                <p class="programms__text">Самый трогательный момент этого дня. Мы обменяемся кольцами в окружении самых близких. Так же вы сможете нас поздравить и сказать тёплые и душевные слова.</p>
+              </li>
+              <li class="progrsmms_programm">
+                <p class="programms__time">16:30-22:30</p>
+                <h3 class="programms__title">Свадебный ужин</h3>
+                <p class="programms__text">С официальной частью покончено, да начнётся веселье! Готовьте удобную обувь и хорошее настроение. Скучно не будет!</p>
+              </li>
+            </ul>
+          </div>
+        </section>
       </main>
       <footer class="footer"><!--Подвал-->
 
