feat: Добавить карту

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
             </ul>
           </div>
         </section>
+        <section class="place"><!--Секция место-->
+          <img src="./images/place.jpeg" alt="Илья & Янина" class="place__image">
+          <h2 class="section-title">Место</h2>
+          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Acf78fd3af56817275ea469af23d807f976a2463dd15a9a29b2b1661ea8efc81e&amp;source=constructor" width="320" height="220" frameborder="0"></iframe>
+        </section>
       </main>
       <footer class="footer"><!--Подвал-->
 
