--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
           <h2 class="section-title">Место</h2>
           <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Acf78fd3af56817275ea469af23d807f976a2463dd15a9a29b2b1661ea8efc81e&amp;source=constructor" width="100%" height="300" frameborder="0"></iframe>
         </section>
+        <section class="dresscode"><!--Секция дресскод-->
+          <div class="dresscode__container">
+            <h2 class="section-title">Дресс-код</h2>
+            <div class="dresscode__text-container">
+              <p class="dresscode__text">Мы очень старались сделать праздник красивым и будем рады, если в своих нарядах вы поддержите природную цветовую гамму нашей свадьбы. Нам будет очень приятно (смотрите палитру ниже).</p>
+              <p class="dresscode__text">Также помните, что мероприятие будет проходить в вечернее время на открытом воздухе, поэтому предусмотрите верхний слой (пиджак, кардиган, жилет) на случай прохладной погоды.</p>
+              <p class="dresscode__text">Для вашего удобства, советуем вам выбрать обувь без каблуков.</p>
+            </div>
+         </div>
+        </section>
       </main>
       <footer class="footer"><!--Подвал-->
 
