feat: Добавить палитру

--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
             </div>
          </div>
         </section>
+        <section class="colors"><!--Секция цвета-->
+          <ul class="colours">
+            <li><img src="./images/colours/red.PNG" alt="Красный" class="colours__colour"></li>
+            <li><img src="./images/colours/brown.PNG" alt="Бордовый" class="colours__colour"></li>
+            <li><img src="./images/colours/green.PNG" alt="Зеленый" class="colours__colour"></li>
+            <li><img src="./images/colours/yellow.PNG" alt="Золотой" class="colours__colour"></li>
+            <li><img src="./images/colours/beige.PNG" alt="Бежевый" class="colours__colour"></li>
+            <li><img src="./images/colours/orange.PNG" alt="Коричневый" class="colours__colour"></li>
+          </ul>
+          <p class="colors__caption">Просьба избегать ярко-бордового и ярко-зелёного цветов.</p>
+        </section>
       </main>
       <footer class="footer"><!--Подвал-->
 
