feat: Добавить подарки

--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
           </ul>
           <p class="colors__caption">Просьба избегать ярко-бордового и ярко-зелёного цветов.</p>
         </section>
+        <section class="gifts"><!--Секция подарки-->
+          <div class="gifts__container">
+            <h2 class="section-title">Подарки</h2>
+            <p class="gifts__text">Не ломайте голову над подарками! Ваши конверты помогут нам приблизиться к мечте о своём гнёздышке</p>
+          </div>
+        </section>
       </main>
       <footer class="footer"><!--Подвал-->
 
