--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <section class="gifts"><!--Секция подарки-->
           <div class="gifts__container">
             <h2 class="section-title">Подарки</h2>
-            <p class="gifts__text">Не ломайте голову над подарками! Ваши конверты помогут нам приблизиться к мечте о своём гнёздышке</p>
+            <p class="gifts__text">Не ломайте голову над подарками! Ваши конверты помогут нам приблизиться к мечте о своём гнёздышке.</p>
           </div>
         </section>
       </main>
