--- a/index.html
+++ b/index.html
@@ -104,7 +104,21 @@
         </section>
       </main>
       <footer class="footer"><!--Подвал-->
-
+        <h2 class="section-title">Контакты</h2>
+        <div class="organizer">
+          <img src="./images/organizer.jpeg" alt="Организатор" class="organizer__image">
+          <h3 class="organizer__title">Ольга</h3>
+          <p class="organizer__subtitle">Свадебный организатор</p>
+        </div>
+        <div class="line"></div>
+        <section class="contacts"><!--Секция контакты-->
+          <p class="contacts__text">В день свадьбы мы будем немного занят, поэтому в случае возникновения вопросов, вы всегда можете обратиться за помощью к нашему организатору.</p>
+          <a href="" class="contacts__link">
+            Пишите в WhatsApp
+            <span class="contacts__icon"></span>
+          </a>
+          <a href="" class="contacts__phone-link">8(918)455-85-16</a>
+        </section>
       </footer>
 
     </div>
