--- a/index.html
+++ b/index.html
@@ -72,8 +72,6 @@
         </section>
         <section class="place"><!--Секция место-->
           <img src="./images/place.jpeg" alt="Илья & Янина" class="place__image">
-          <h2 class="section-title">Место</h2>
-          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Acf78fd3af56817275ea469af23d807f976a2463dd15a9a29b2b1661ea8efc81e&amp;source=constructor" width="100%" height="300" frameborder="0"></iframe>
         </section>
         <section class="dresscode"><!--Секция дресскод-->
           <div class="dresscode__container">
@@ -85,7 +83,7 @@
             </div>
          </div>
         </section>
-        <section class="colors"><!--Секция цвета-->
+        <section class="colors" aria-label="colors"><!--Секция цвета-->
           <ul class="colours">
             <li><img src="./images/colours/red.PNG" alt="Красный" class="colours__colour"></li>
             <li><img src="./images/colours/brown.PNG" alt="Бордовый" class="colours__colour"></li>
@@ -113,11 +111,16 @@
         <div class="line"></div>
         <section class="contacts"><!--Секция контакты-->
           <p class="contacts__text">В день свадьбы мы будем немного занят, поэтому в случае возникновения вопросов, вы всегда можете обратиться за помощью к нашему организатору.</p>
-          <a href="" class="contacts__link">
+          <a href="https://wa.me/79184558516" class="contacts__link" target="_blank">
             Пишите в WhatsApp
             <span class="contacts__icon"></span>
           </a>
-          <a href="" class="contacts__phone-link">8(918)455-85-16</a>
+          <a href="tel:+79184558516" class="contacts__phone-link" target="_blank">8(918)455-85-16</a>
+        </section>
+        <div class="line line_type_right"></div>
+        <section class="map"><!--Секция карта-->
+          <h2 class="section-title">Место</h2>
+          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Acf78fd3af56817275ea469af23d807f976a2463dd15a9a29b2b1661ea8efc81e&amp;source=constructor" width="100%" height="300" frameborder="0"></iframe>
         </section>
       </footer>
 
