fix: Исправить ошибки

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Илья & Янина 07.05</title>
-    <meta name="description" content="Website about our wedding">
+    <meta name="description" content="Приглашение на нашу свадьбу.">
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="IL.kor">
     <link rel="stylesheet" href="./pages/index.css">
@@ -16,8 +16,8 @@
     <div class="page"><!--Страница-->
       <header class="header"><!--Шапка-->
         <section class="lead"><!--Секция вступление-->
-            <h1 class="lead__title">Илья & Янина</h1>
-            <p class="lead__subtitle">приглашение на свадьбу</p>
+            <h1 class="lead__title">Илья &amp;&nbsp;Янина</h1>
+            <p class="lead__subtitle">приглашение на&nbsp;свадьбу</p>
         </section>
       </header>
       <main class="content"><!--Страница-->
@@ -25,15 +25,15 @@
           <div class="quote">
             <div class="quote__strip"></div>
             <div class="quote__wrapper">
-              <p class="quote__text">Мы шли к этому пять лет. Отношения прошли испытания в виде карантина, расстояния, работы.</p>
-              <h2 class="quote__title">Но мы справились!</h2>
-              <p class="quote__text">Мы будем счастливы отпраздновать нашу свадьбу в душевной атмосфере среди самых близких и родных нам людей.</p>
+              <p class="quote__text">Мы&nbsp;шли к&nbsp;этому пять лет. Отношения прошли испытания в&nbsp;виде карантина, расстояния, работы.</p>
+              <h2 class="quote__title">Но&nbsp;мы&nbsp;справились!</h2>
+              <p class="quote__text">Мы&nbsp;будем счастливы отпраздновать нашу свадьбу в&nbsp;душевной атмосфере среди самых близких и&nbsp;родных нам людей.</p>
             </div>
            </div>
           <ul class="table">
             <li class="table__cell">
               <h3 class="table__title">кто</h3>
-              <p class="table__text">самые дорогие и близкие</p>
+              <p class="table__text">самые дорогие и&nbsp;близкие</p>
             </li>
             <li class="table__cell">
               <h3 class="table__title">где</h3>
@@ -41,8 +41,7 @@
             </li>
             <li class="table__cell">
               <h3 class="table__title">когда</h3>
-              <p class="table__text">7 мая 2023
-                воскресенье</p>
+              <p class="table__text">7&nbsp;мая 2023 воскресенье</p>
             </li>
           </ul>
         </section>
@@ -52,33 +51,33 @@
           <div class="section-wrapper">
             <div class="section-line"></div>
             <ul class="programms">
-              <li class="programms__programm">
+              <li>
                 <p class="programms__time">15:30-16:00</p>
                 <h3 class="programms__title">Сбор гостей</h3>
-                <p class="programms__text">Время пролетит незаметно за общением с другими гостями. Кроме того, ожидания скрасит приветственный фуршет и бокал игристого.</p>
+                <p class="programms__text">Время пролетит незаметно за&nbsp;общением с&nbsp;другими гостями. Кроме того, ожидание скрасит приветственный фуршет и&nbsp;бокал игристого.</p>
               </li>
-              <li class="progrsmms_programm">
+              <li>
                 <p class="programms__time">16:00-16:30</p>
                 <h3 class="programms__title">Выездная церемония</h3>
-                <p class="programms__text">Самый трогательный момент этого дня. Мы обменяемся кольцами в окружении самых близких. Так же вы сможете нас поздравить и сказать тёплые и душевные слова.</p>
+                <p class="programms__text">Самый трогательный момент этого дня. Мы&nbsp;обменяемся кольцами в&nbsp;окружении самых близких. Так&nbsp;же вы&nbsp;сможете нас поздравить и&nbsp;сказать тёплые и&nbsp;душевные слова.</p>
               </li>
-              <li class="progrsmms_programm">
+              <li>
                 <p class="programms__time">16:30-22:30</p>
                 <h3 class="programms__title">Свадебный ужин</h3>
-                <p class="programms__text">С официальной частью покончено, да начнётся веселье! Готовьте удобную обувь и хорошее настроение. Скучно не будет!</p>
+                <p class="programms__text">С&nbsp;официальной частью покончено, да&nbsp;начнётся веселье! Готовьте удобную обувь и&nbsp;хорошее настроение. Скучно не&nbsp;будет!</p>
               </li>
             </ul>
           </div>
         </section>
-        <section class="place"><!--Секция место-->
+        <section class="place" aria-label="place"><!--Секция место-->
           <img src="./images/place.jpeg" alt="Илья & Янина" class="place__image">
         </section>
         <section class="dresscode"><!--Секция дресскод-->
           <div class="dresscode__container">
             <h2 class="section-title">Дресс-код</h2>
             <div class="dresscode__text-container">
-              <p class="dresscode__text">Мы очень старались сделать праздник красивым и будем рады, если в своих нарядах вы поддержите природную цветовую гамму нашей свадьбы. Нам будет очень приятно (смотрите палитру ниже).</p>
-              <p class="dresscode__text">Также помните, что мероприятие будет проходить в вечернее время на открытом воздухе, поэтому предусмотрите верхний слой (пиджак, кардиган, жилет) на случай прохладной погоды.</p>
+              <p class="dresscode__text">Мы&nbsp;очень старались сделать праздник красивым и&nbsp;будем рады, если в&nbsp;своих нарядах вы&nbsp;поддержите природную цветовую гамму нашей свадьбы. Нам будет очень приятно (смотрите палитру ниже).</p>
+              <p class="dresscode__text">Также помните, что мероприятие будет проходить в&nbsp;вечернее время на&nbsp;открытом воздухе, поэтому предусмотрите верхний слой (пиджак, кардиган, жилет) на&nbsp;случай прохладной погоды.</p>
               <p class="dresscode__text">Для вашего удобства, советуем вам выбрать обувь без каблуков.</p>
             </div>
          </div>
@@ -92,7 +91,7 @@
             <li><img src="./images/colours/beige.PNG" alt="Бежевый" class="colours__colour"></li>
             <li><img src="./images/colours/orange.PNG" alt="Коричневый" class="colours__colour"></li>
           </ul>
-          <p class="colors__caption">Просьба избегать ярко-бордового и ярко-зелёного цветов.</p>
+          <p class="colors__caption">Просьба избегать ярко-бордового и&nbsp;ярко-зелёного цветов.</p>
         </section>
         <section class="gifts"><!--Секция подарки-->
           <div class="gifts__container">
@@ -109,8 +108,8 @@
           <p class="organizer__subtitle">Свадебный организатор</p>
         </div>
         <div class="line"></div>
-        <section class="contacts"><!--Секция контакты-->
-          <p class="contacts__text">В день свадьбы мы будем немного занят, поэтому в случае возникновения вопросов, вы всегда можете обратиться за помощью к нашему организатору.</p>
+        <section class="contacts" aria-label="contacts"><!--Секция контакты-->
+          <p class="contacts__text">В&nbsp;день свадьбы мы&nbsp;будем немного заняты, поэтому в&nbsp;случае возникновения вопросов, вы&nbsp;всегда можете обратиться за&nbsp;помощью к&nbsp;нашему организатору.</p>
           <a href="https://wa.me/79184558516" class="contacts__link" target="_blank">
             Пишите в WhatsApp
             <span class="contacts__icon"></span>
